# RosCarSim

./: .gitignore  GETTING_STARTED.md  PROJECT_README.md  PROJECT_SETUP_SUMMARY.md  run_rossim.sh
MicroROS-Car-Pi5-main/09.Lidar course/: Precautions for Radar Mapping and Navigation.txt
docs/: ARCHITECTURE.md  ATTRIBUTION.md  COMPATIBILITY.md  INSTALLATION.md  QUICK_REFERENCE.md  ROADMAP.md
launch/: rossim_full.launch.py
src/rossim_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/rossim_core/launch/: rossim_full.launch.py
src/rossim_core/resource/: rossim_core
src/rossim_core/rossim_core/: __init__.py  adas_manager.py  control_manager.py  vehicle_model.py
src/vehicle_control_gui/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vehicle_control_gui/resource/: vehicle_control_gui
src/vehicle_control_gui/vehicle_control_gui/: __init__.py  control_panel.py
src/vehicle_options_gui/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vehicle_options_gui/resource/: vehicle_options_gui
src/vehicle_options_gui/vehicle_options_gui/: __init__.py  options_panel.py
src/vehicle_viz/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vehicle_viz/resource/: vehicle_viz
src/vehicle_viz/vehicle_viz/: __init__.py  unified_dashboard.py  vehicle_display.py
