<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rossim_core</name>
  <version>0.0.1</version>
  <description>Core vehicle simulation engine for RosSim</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  
  <!-- Attribution to base projects -->
  <author email="support@yahboom.com">Yahboom Technology (MicroROS-Car-Pi5)</author>
  <author>ROS Community (ros-raspberry-pi)</author>
  
  <url type="repository">https://github.com/yourusername/RosSim</url>
  <url type="bugtracker">https://github.com/yourusername/RosSim/issues</url>
  
  <!-- Build Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <!-- Runtime Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- Notes on ROS2 Jazzy Compatibility -->
  <!-- All dependencies verified for ROS2 Jazzy (2024-05) -->
  <!-- Python 3.10+ required -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
