<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_options_gui</name>
  <version>0.0.1</version>
  <description>Vehicle Options GUI - ABS, traction control, ADAS configuration</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  
  <url type="repository">https://github.com/yourusername/RosSim</url>
  
  <!-- Build Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <!-- Runtime Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- GUI Framework -->
  <exec_depend>python3-pysimplegui</exec_depend>
  <!-- Alternative: PyQt5 (uncomment if preferred) -->
  <!-- <exec_depend>python3-pyqt5</exec_depend> -->
  <!-- Graphics -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
